<resources>
    <string name="app_name">BMI4</string>
    <string name="under_weight">Under Weight</string>
    <string name="healthy">Healthy</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Suffering from Obesity</string>
    <string name="valid_numbers">Enter Valid Numbers</string>
    <string name="height_zero_error">Height cannot be zero</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="weight_in_kg">Weight (in Kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="calculate">Calculate</string>
    <string name="EditText">EditText</string>
    <string name="Enter_Weight">Enter Weight</string>
    <string name="Enter_Height">Enter Height</string>
    <string name="status">Status</string>


</resources>